--- a/public/1v1.html
+++ b/public/1v1.html
@@ -45,28 +45,28 @@
 	    <table id="t2" valign="middle" align = "right" border = "1">		
             <div align = "center">Opponent's Game Area</div>
 		    <tr>
-			    <td><p><img href = "javascript:void(0)"  id="location18" align="bottom" width="90%" height="200%" onclick="poker(0)"/></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location19" align="bottom" width="90%" height="200%" onclick="poker(1)"></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location20" align="bottom" width="90%" height="200%" onclick="poker(2)"></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location21" align="bottom" width="90%" height="200%" onclick="poker(3)"></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location22" align="bottom" width="90%" height="200%" onclick="poker(4)"></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location23" align="bottom" width="90%" height="200%" onclick="poker(5)"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location18" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location19" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location20" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location21" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location22" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location23" align="bottom" width="90%" height="200%"></p></td>
 		    </tr>
 		    <tr>
-			    <td><p><img href = "javascript:void(0)"  id="location24" align="bottom" width="90%" height="200%" onclick="poker(6)"></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location25" align="bottom" width="90%" height="200%" onclick="poker(7)"></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location26" align="bottom" width="90%" height="200%" onclick="poker(8)"></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location27" align="bottom" width="90%" height="200%" onclick="poker(9)"></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location28" align="bottom" width="90%" height="200%" onclick="poker(10)"></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location29" align="bottom" width="90%" height="200%" onclick="poker(11)"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location24" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location25" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location26" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location27" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location28" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location29" align="bottom" width="90%" height="200%"></p></td>
 		    </tr>
 		    <tr>
-			    <td><p><img href = "javascript:void(0)"  id="location30" align="bottom" width="90%" height="200%" onclick="poker(12)"></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location31" align="bottom" width="90%" height="200%" onclick="poker(13)"></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location32" align="bottom" width="90%" height="200%" onclick="poker(14)"></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location33" align="bottom" width="90%" height="200%" onclick="poker(15)"></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location34" align="bottom" width="90%" height="200%" onclick="poker(16)"></p></td>
-			    <td><p><img href = "javascript:void(0)"  id="location35" align="bottom" width="90%" height="200%" onclick="poker(17)"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location30" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location31" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location32" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location33" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location34" align="bottom" width="90%" height="200%"></p></td>
+			    <td><p><img href = "javascript:void(0)"  id="location35" align="bottom" width="90%" height="200%"></p></td>
 		    </tr>  
 					
 	    </table>
