--- a/public/1v1.html
+++ b/public/1v1.html
@@ -42,7 +42,7 @@
     </div>
 
 	<div id="remote">
-	    <table id="t2" valign="middle" align = "right" border = "1">		
+	    <table id="t2" valign="middle" align = "right">		
             <div align = "center">Opponent's Game Area</div>
 		    <tr>
 			    <td><p><img href = "javascript:void(0)"  id="location18" align="bottom" width="90%" height="200%"></p></td>
@@ -98,7 +98,6 @@
 
     <script src="socket.io.js"></script>
     <script src="local.js"></script>
-    <script src="remote.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
