--- a/public/1v1.html
+++ b/public/1v1.html
@@ -72,8 +72,11 @@
 	    </table>
     </div>
 
-	
-    
+    <br><br><br><br>
+    <!--
+    <p id="demo1">ff</p>
+    <p id="demo2">ff</p>
+    -->
     <div id="startpage" class="white_content" align="left" valign="middle">
         <div id="waiting"></div>
         <div id="ready"></div>
