--- a/public/game2.html
+++ b/public/game2.html
@@ -22,7 +22,6 @@
                 	var user="";
                 	user+=data.user;
                 	$("h1").html(user);
-
             		}
         		},
         	error:function(){
@@ -66,8 +65,19 @@
 
 	<br></br>
 
-	<div id="menu" class="menu" align="left" valign="middle">
 
+
+
+
+
+
+
+	<h2 id="user1Hello">P1 TEST!!</h2>
+	<h2 id="user2Hello">P2 TEST!!</h2>
+
+
+
+	<div id="menu" class="menu" align="left" valign="middle">
     	<h4>New game</h4>
     	<input type="text" name="name" id="nameNew" placeholder="Enter your name" required>
     	<button id="new">New Game</button>
@@ -84,8 +94,19 @@
     			$("#choose").show();
     		}
     	</script>
-
 	</div>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 	<div id="choose">
