--- a/public/game2.html
+++ b/public/game2.html
@@ -79,15 +79,15 @@
 
 	<div id="menu" class="menu" align="left" valign="middle">
     	<h4>New game</h4>
-    	<input type="text" name="name" id="nameNew" placeholder="Enter your name" required>
-    	<button id="new">New Game</button>
+    	<input type="text" name="name" id="nameNew">
+    	<button id="new" onclick="room()">New Game</button>
 
     	<br><br>
     
     	<h4>Join an existing game</h4>
     	<input type="text" name="name" id="nameJoin" placeholder="Enter your name" required>
     	<input type="text" name="room" id="room" placeholder="Enter Game ID" required>
-    	<button id="join" onclick="room()">Join Game</button>
+    	<button id="join" >Join Game</button>
     	<script type="text/javascript">
     		function room(){
     			$("#menu").hide();
