--- a/public/game2.html
+++ b/public/game2.html
@@ -80,7 +80,7 @@
 	<div id="menu" class="menu" align="left" valign="middle">
     	<h4>New game</h4>
     	<input type="text" name="name" id="nameNew">
-    	<button id="new" onclick="room()">New Game</button>
+    	<button id="new">New Game</button>
 
     	<br><br>
     
@@ -88,12 +88,7 @@
     	<input type="text" name="name" id="nameJoin" placeholder="Enter your name" required>
     	<input type="text" name="room" id="room" placeholder="Enter Game ID" required>
     	<button id="join" >Join Game</button>
-    	<script type="text/javascript">
-    		function room(){
-    			$("#menu").hide();
-    			$("#choose").show();
-    		}
-    	</script>
+
 	</div>
 
 
