--- a/public/1v1.html
+++ b/public/1v1.html
@@ -73,9 +73,9 @@
     </div>
 
     <div id="startpage" class="white_content" align="left" valign="middle">
-        <div id="waiting"></div>
-        <div id="ready"></div>
-        <p id="3togoshow">Game will start in <span id="mes">3</span> seconds！</p>
+        <div id="waiting" align = "center"></div>
+        <div id="ready" align = "center"></div>
+        <p id="3togoshow" align = "center">Game will start in <span id="mes">3</span> seconds！</p>
         <script>
             $("#startpage").show();    
             $("#3togoshow").hide();   
@@ -95,7 +95,6 @@
     
 
     <script src="socket.io.js"></script>
-    <script src="local.js"></script>
-    <script src="script.js"></script>
+    <script src="1v1.js"></script>
 </body>
 </html>
