--- a/public/game.html
+++ b/public/game.html
@@ -138,6 +138,7 @@
 				}
 
 				document.getElementById("location"+id).src="images/"+a+"/card"+poke[id]+".jpg";
+				poke[id]==-1;
 				if(flag){
 					if(poke[id]==poke[oneid]){
 						poke[id]=-1;
@@ -145,6 +146,7 @@
 					}
 					else{
 						setTimeout("fail("+id+","+oneid+")",600);
+						poke[oneid]==1;
 					}
 					oneid=-1;
 					flag=false;
