--- a/public/modify.html
+++ b/public/modify.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <link href="modify.css " rel="stylesheet" type="text/css" /> 
     <link rel = "icon" href="data:,">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="jquery.min.js"></script>
     
 </head>
 
