--- a/public/pokedex.html
+++ b/public/pokedex.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel = "shortcut icon" href="">
     <link rel="stylesheet" type="text/css" href="pokedex.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="jquery.min.js"></script>
     <link rel = "icon" href="data:,">
 </head>
 <body>
