--- a/public/GM.html
+++ b/public/GM.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link href="GM.css " rel="stylesheet" type="text/css" /> 
     <link rel = "icon" href="data:,">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="jquery.min.js"></script>
 
     <h2 align = "left" id="name"></h2>
 
