--- a/public/signup.html
+++ b/public/signup.html
@@ -3,7 +3,7 @@
 <head>
 
 <link href="signup.css " rel="stylesheet" type="text/css" />  
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
+<script src="jquery.min.js"></script> 
 <link rel = "icon" href="data:,">
 
 
