--- a/public/game2.html
+++ b/public/game2.html
@@ -75,8 +75,8 @@
 
 
 
-	<h2 id="user1Hello1">P1 TEST!!</h2>
-	<h2 id="user2Hello2">P2 TEST!!</h2>
+	<h2 id="t1">P1 TEST!!</h2>
+	<h2 id="t2">P2 TEST!!</h2>
 
 
 
