--- a/public/game2.html
+++ b/public/game2.html
@@ -30,7 +30,7 @@
 
 	<input type="button" value="logout"  class="float-left submit-button" id="logout" > 
 
-	<script>
+<!-- 	<script>
 	//wait til button clicked
 		$("#logout").click(function(){
 			$.ajax({
@@ -46,7 +46,7 @@
 				}
 			});
 		}); 
-	</script>
+	</script> -->
 
 	<br></br>
 
@@ -208,24 +208,26 @@
 				$("#box").show();
 				document.getElementById("steps").innerHTML=count;
 			}
-			$("#upload").click(function(){
-				var one_steps=count;
-				$.ajax({
-        			type:"post",
-        			url:"/ranking",
-        			data:{one_steps:one_steps},
-        			success:function(data){
-            			if(data.status==-1){
-            				alert("ranking Fail!");
-            			}else{
-            			alert("ranking success!");
-            		}
-        		},
-        		error:function(){
-            		alert("Internet Error");
-        		}
-    		})
-		});
+
+		// 	$("#upload").click(function(){
+		// 		var one_steps=count;
+		// 		$.ajax({
+  //       			type:"post",
+  //       			url:"/ranking",
+  //       			data:{one_steps:one_steps},
+  //       			success:function(data){
+  //           			if(data.status==-1){
+  //           				alert("ranking Fail!");
+  //           			}else{
+  //           			alert("ranking success!");
+  //           		}
+  //       		},
+  //       		error:function(){
+  //           		alert("Internet Error");
+  //       		}
+  //   		})
+		// });
+			
 			</script>
 		</center>
 	</div>
@@ -243,9 +245,9 @@
     	<br></br>
 		<button id="start" onclick="start();shuffle_poke()">Start</a>
 		<script>
-			$("#menu").show();
-			$("#choose").hide();
-			$("#light").hide();
+			// $("#menu").show();
+			// $("#choose").hide();
+			// $("#light").hide();
 			function start(){
 				$("#light").hide(); 
 			}
