--- a/public/game2.html
+++ b/public/game2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="game.css">
+    <link rel="stylesheet" type="text/css" href="game2.css">
     <link rel = "icon" href="data:,">
 
 
@@ -30,23 +30,6 @@
 
 	<input type="button" value="logout"  class="float-left submit-button" id="logout" > 
 
-<!-- 	<script>
-	//wait til button clicked
-		$("#logout").click(function(){
-			$.ajax({
-				type:"get",
-				url:"/logout",
-				success:function(data){
-					if(data.status==-1){
-						location.href="https://stark-spire-21434.herokuapp.com/login.html";
-					}
-				},
-				error:function(){
-					alert("logout error!");
-				}
-			});
-		}); 
-	</script> -->
 
 	<br></br>
 
@@ -227,7 +210,7 @@
   //       		}
   //   		})
 		// });
-			
+
 			</script>
 		</center>
 	</div>
