--- a/public/game2.html
+++ b/public/game2.html
@@ -228,9 +228,9 @@
     	<br></br>
 		<button id="start" onclick="start();shuffle_poke()">Start</a>
 		<script>
-			// $("#menu").show();
-			// $("#choose").hide();
-			// $("#light").hide();
+			$("#menu").show();
+			$("#choose").hide();
+			$("#light").hide();
 			function start(){
 				$("#light").hide(); 
 			}
