--- a/public/1v1.html
+++ b/public/1v1.html
@@ -139,12 +139,14 @@
             
 	<div id="box" class="white_content" align="left" valign="middle">
 		<center>
+            <div id="offline"></div>
             <div id="result"></div>
             <br></br>
             <div id="hidesteps">
 			<p>Your steps is: </p>
             <p id="steps"></p>
             </div>
+            <input type="submit" id="upload" value="UploadGrade">
 		</center>
 	</div>
 
