--- a/public/homepage.html
+++ b/public/homepage.html
@@ -147,7 +147,7 @@
     };
     document.getElementById("game2").onclick = function () {
         // location.href = "https://stark-spire-21434.herokuapp.com/choose.html";
-        location.href = "https://stark-spire-21434.herokuapp.com/game2.html";
+        location.href = "https://stark-spire-21434.herokuapp.com/1v1.html";
     };
 </script>
 
