--- a/public/1v1.html
+++ b/public/1v1.html
@@ -22,8 +22,10 @@
             success:function(data){
                 if(data.status==-1){
                     var user="";
+                    var remotename;
                     user+=data.user;
                     $("h1").html(user);
+                    socket.emit("getname",{remotename:user});
                     var msg="";
                     msg+=data.msg;
                     $("p1").html(msg);
@@ -99,7 +101,7 @@
     
     
     <table id="t2" valign="middle" align = "right">		
-        <div align = "center">Opponent's Game Area</div>
+        <div align = "center"><p id = remotename></p>'s Game Area</div>
         <tr>
             <td><p><img href = "javascript:void(0)"  id="location18" align="bottom" width="90%" height="200%"></p></td>
             <td><p><img href = "javascript:void(0)"  id="location19" align="bottom" width="90%" height="200%"></p></td>
