--- a/public/1v1.html
+++ b/public/1v1.html
@@ -101,7 +101,7 @@
     
     
     <table id="t2" valign="middle" align = "right">		
-        <p align = "center"><p id = remotename>'s Game Area</p>
+        <div id = "remotename" align = "center">'s Game Area</div>
         <tr>
             <td><p><img href = "javascript:void(0)"  id="location18" align="bottom" width="90%" height="200%"></p></td>
             <td><p><img href = "javascript:void(0)"  id="location19" align="bottom" width="90%" height="200%"></p></td>
