--- a/public/1v1.html
+++ b/public/1v1.html
@@ -128,7 +128,7 @@
                
     </table>
 
-    <div id="startpage" class="white_content" align="left" valign="middle">
+    <!-- <div id="startpage" class="white_content" align="left" valign="middle">
         <div id="waiting" align = "center"></div>
         <div id="ready" align = "center"></div>
         <p id="3togoshow" align = "center">Game will start in <span id="mes">3</span> seconds！</p>
@@ -149,7 +149,7 @@
             </div>
             <input type="submit" id="upload" value="UploadGrade">
 		</center>
-    </div>
+    </div> -->
 
 </body>
 </html>
