--- a/public/game.html
+++ b/public/game.html
@@ -201,15 +201,15 @@
 	</div>
 
 	<div id="light" class="white_content" align="left" valign="middle">
-		Rule:
+		Rules:
 		<br></br>
-		Players choose a pattern for the cards. Cards are all initialized face-down.
+		1. Players choose a pattern for the cards. Cards are all initialized face-down.
 		<br></br>
-    	Each player takes turns flipping two cards face-up — if they are of the same, then that player wins the pair(the pair stays face-up) and gets another turn.
+    	2. Each player takes turns flipping two cards face-up — if they are of the same, then that player wins the pair(the pair stays face-up) and gets another turn.
     	<br></br>
-    	If the cards are not identical, they are turned back facedown and it becomes the next player’s turn to pick two cards.
+    	3. If the cards are not identical, they are turned back facedown and it becomes the next player’s turn to pick two cards.
     	<br></br>
-    	The game continues until players have picked up all the pairs; the winner is the player with the most pairs.
+    	4. The game continues until players have picked up all the pairs; the winner is the player with the most pairs.
     	<br></br>
 		<button id="start" onclick="start();shuffle_poke()">Start</a>
 		<script>
