--- a/public/login.html
+++ b/public/login.html
@@ -52,13 +52,15 @@
 <input type="button" onClick="msgbox(1)" value="rule" id="Lrule">
 <div id='inputbox' class="box">
     <a class='x' href=''; onclick="msgbox(0); return false;">close</a>
-    Players choose a pattern for the cards. Cards are all initialized face-down.
+    Rules:
     <br/>
-    Each player takes turns flipping two cards face-up — if they are of the same , then that player wins the pair(the pair stays face-up) and gets another turn.
+    1. Players choose a pattern for the cards. Cards are all initialized face-down.
     <br/>
-    If the cards are not identical, they are turned back facedown and it becomes the next player’s turn to pick two cards.
+    2. Each player takes turns flipping two cards face-up — if they are of the same , then that player wins the pair(the pair stays face-up) and gets another turn.
     <br/>
-    The game continues until players have picked up all the pairs; the winner is the player with the most pairs.
+    3. If the cards are not identical, they are turned back facedown and it becomes the next player’s turn to pick two cards.
+    <br/>
+    4. The game continues until players have picked up all the pairs; the winner is the player with the most pairs.
 </div>
 <script>  
     function msgbox(n){
