--- a/public/game.html
+++ b/public/game.html
@@ -186,16 +186,16 @@
         			data:{one_steps:one_steps},
         			success:function(data){
             			if(data.status==-1){
-            				alert("ranking Fail!");
+            				alert("Upload Fail!");
             			}else{
-            			alert("ranking success!");
-            		}
-        		},
-        		error:function(){
-            		alert("Internet Error");
-        		}
-    		})
-		});
+            			alert("Upload Success!");
+            			}
+        			},
+        			error:function(){
+            			alert("Internet Error");
+        			}
+    			})
+			});
 			</script>
 		</center>
 	</div>
