--- a/public/homepage.html
+++ b/public/homepage.html
@@ -50,7 +50,7 @@
     <tr>
         <th style="color: #4169E1" width="30%">Ranking</th>
         <th style="color: #4169E1" width="30%">Name</th>
-        <th style="color: #4169E1" width="30%">Win</th>
+        <th style="color: #4169E1" width="30%">Steps</th>
     </tr>
     <tr>
         <td>No.1</td>
