--- a/public/1v1.html
+++ b/public/1v1.html
@@ -147,7 +147,7 @@
 			<p>Your steps is: </p>
             <p id="steps"></p>
             </div>
-            <input type="submit" id="upload" value="UploadGrade">
+            <input type="submit" id="upload2" value="UploadGrade">
 		</center>
     </div> 
 
