--- a/public/homepage.html
+++ b/public/homepage.html
@@ -203,7 +203,7 @@
         url:"/rankinglist2",
         success:function(data){
             if(data.status==0){
-                var table=document.getElementById('ranking');
+                var table=document.getElementById('ranking2');
                 var size=table.rows.length;
                 for(i=1;i<size;i++){
                     table.deleteRow(i);
