--- a/public/homepage.html
+++ b/public/homepage.html
@@ -79,7 +79,7 @@
     </tr>
 </table>
 <table id="ranking2">
-    <caption id="rankingtitle2">Player Ranking</caption>
+    <caption id="rankingtitle2">1VS1 Ranking</caption>
     <tr>
         <th style="color: #4169E1" width="30%">Ranking</th>
         <th style="color: #4169E1" width="30%">Name</th>
@@ -193,7 +193,7 @@
     <p1 id = "gm_msg">Message</p1>
 </div>
 
-<table id="myownbackground">    
+<table id="ranking2background">    
 </table>
 
 
