--- a/public/tmp.html
+++ b/public/tmp.html
@@ -5,6 +5,7 @@
   <title>Socket.IO Chat Example</title>
   <link rel="stylesheet" href="tmp.css">
   <link rel = "icon" href="data:,">
+  <script src="jquery.min.js"></script>
 
 </head>
 <body>
